--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: Deployment
+name: Build docker image
 on:
   push:
     branches:
@@ -15,6 +15,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: itsgytis/vim_bot
+          repository: dieracdelta/vim_bot
           tags: latest
 
