--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,12 @@
 version: '3'
 
 services:
-        vim_bot:
-                build:
-                        context: .
-
-                environment:
-                        - DISCORD_TOKEN=123
+  vim_bot:
+    image: dieracdelta/vimbot
+    build:
+      context: .
+    environment:
+      - DISCORD_TOKEN=token
+      - CHANNEL_ID=123
+      - ROLE_ID=123
+      #- RUST_LOG=debug
