--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 env_logger = "0.6"
 kankyo = "0.2"
 log = "0.4"
+rand = "0.8.3"
 
 [dependencies.serenity]
 default-features = false
