--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,11 @@
+
 [package]
 name = "vim_bot"
 version = "0.1.0"
-authors = ["me"]
+authors = ["justin@restivo.me"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-env_logger = "0.6"
-kankyo = "0.2"
-log = "0.4"
 rand = "0.8.3"
-
-[dependencies.serenity]
-default-features = false
-features = [
-    "cache",
-    "builder",
-    "client",
-    "framework",
-    "gateway",
-    "http",
-    "model",
-    "standard_framework",
-    "utils",
-    "rustls_backend",
-]
-version = "0.7"
+serenity = { version = "0.10.2", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
