--- a/.github/workflows/cachix.yml
+++ b/.github/workflows/cachix.yml
@@ -1,4 +1,4 @@
-name: "Cachix"
+name: Cachix
 
 on:
   pull_request:
@@ -10,12 +10,10 @@ jobs:
     name: Build configuration
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2.3.1
+    - uses: actions/checkout@v2.3.4
+    - uses: cachix/install-nix-action@v13
       with:
-        fetch-depth: 0 # Nix Flakes doesn't work on shallow clones
-    - uses: cachix/install-nix-action@v12
-      with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20201007_5257a25/install
-        extra_nix_config: |
-          experimental-features = nix-command flakes
+        install_url: https://github.com/numtide/nix-unstable-installer/releases/download/nix-2.4pre20210604_8e6ee1b/install
+        extra_nix_config: experimental-features = nix-command flakes
+
     - run: nix build
